- ADD: TME shows the differences in whitespaces
       inside a line too. (Stefan)
- CHG: Use a fixed width font for log messages. (Stefan)
- BUG: Fixed a bug in LogDlg, where Double-click 
       and right-click behaved differently. 
       Double-Click tried to fetch the log for 
       a wrong revision. (Luebbe)
- BUG: Fixed a crash if the patchfile to apply contained
       a new but empty file. (Stefan)
- BUG: Don't try to show the context menu in TME for
       the view title. (Stefan)
- BUG: Bring the progress window to front even after
       a confirmation dialog. (Stefan)
- BUG: Pressing a key while the log dialog fetches
       all messages (or even after that) could
       throw an error. (Stefan)
       
Version 0.24
- ADD: A new separate program to apply patches,
       showing diffs and resolving conflicts.
       The program is called TortoiseMerge.
       (Stefan)
- ADD: New command to create patchfiles in
       unified diff format from a modified
       working copy. (Stefan)
- ADD: New command to apply patchfiles in
       unified diff format to a working
       copy. (Stefan)
- ADD: New checkbox to select/deselect all entries
       in the commit dialog. (Stefan)
- ADD: A doubleclick on a file/entry in the log dialog
       starts the diff viewer. (Stefan)
- ADD: Doubleclicking on merged files in the update
       progress dialog starts the diff viewer. (Stefan)
- CHG: The settings dialog got a facelift. (Stefan)
- CHG: The layout in our installation folder
       is more organized. (Stefan)
- CHG: The about box got a facelift: it finally
       has the correct TSVN logo in it. (Stefan)
- CHG: Don't show an error if a temporary file
       can't get deleted because of a stupid
       virus scanner. (Stefan)
- CHG: The log dialog now shows the file/foldername
       for which the log is requested in the
       window title. (Stefan)
- BUG: Convert the Subversion error messages
       properly from UTF8 to UNICODE/MBCS. (Stefan)
       